Make /user/{username}/submitted and /user/{username}/upvoted return Post rather than properties of post vertex